# cinelingus

./: .gitignore  README.md  further_implementation.txt  pyproject.toml  run_cinelingus.py  run_movie_masher.py  run_translation.py
assets/: instrument_apertures.json
config/: default.json  montage_corpus_resolver.example.json  montage_e2e.json  performance_quality_corpus.example.json
docs/: adding_filters.md  filter_architecture_inventory.md  filter_contract_catalog.md  filter_contract_program_implementation_plan.md  montage_III_addendum.txt  montage_II_foundation.txt  montage_IV_audio_qualification_repair.txt  montage_I_design.txt  reliable_first_translation.md
evaluation/: bounded_corpus_calibration_20260721.json  corpus_manifest.json  extended_calibration_candidate14_plan.json  extended_calibration_followup_plan.json  extended_calibration_outcome_20260721.json  extended_calibration_plan.json  extended_calibration_plan_initial.json  extended_calibration_supplement2_plan.json  extended_calibration_supplement3_plan.json  extended_calibration_supplement_plan.json  extended_excerpt_plan.json  extended_plan.json  neighborhood_repair_experiment_20260721.json  performance_quality_corpus_report.json  phase0_candidate_recovery_outcome_20260721.json  phase0_completion_audit_20260721.json  phase0_coordinated_performance_plan.json  phase0_coordinated_repair_outcome_20260721.json  phase0_duration_confidence_retry_plan.json  phase0_observed_strategy_outcome_20260721.json  phase0_performance_strategy_plan.json  phase0_quality_threshold_calibration_20260721.json  (+25 more)
(+586 files in other folders)
